<resources>
    <string name="app_name">FoodHub</string>
    <string name="title_home">Home</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="hello_username">Hello, Username</string>
    <string name="favorite">Favorite</string>
    <string name="cheap">Cheap</string>
    <string name="trend">Trend</string>
    <string name="more">more</string>
    <string name="fruit_salad">Fruit Salad</string>
    <string name="fuit_salad">Delicious Fruit Salad with many fruits</string>
    <string name="eat_que">What do you want to eat ?</string>
    <string name="today_s_promo">Today\'s Promo</string>
    <string name="welcome_to_foodhub">Welcome to FoodHub</string>
    <string name="quality_food">We deliver Quality food to your doorsteps</string>
    <string name="driver">Driver</string>
    <string name="go">GO</string>
    <string name="forget_password">Forget Password?</string>
    <string name="FirstName">First name</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="username">Phone number</string>
    <string name="sign_up">Sign Up</string>
    <string name="lastname">Last Name</string>
    <string name="alreadyUser">Already a User ? Sign In</string>
    <string name="error_text">* Error Text</string>
    <string name="opt_sent_text">We have sent you an OTP for Phone Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify otp</string>
    <string name="error_message">* Please fill in all the details to continue</string>
    <string name="valid_phone">* Please Provide Valid Phone number</string>
    <string name="verificationCode_error">Invalid Verification Code!</string>
    <string name="otp_error_msg">* Please enter an otp</string>
    <string name="phone_register">* Phone Number is already registered!</string>
</resources>