<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.foodapp.ui.VerifyOtp">

    <FrameLayout
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginEnd="8dp"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/primaryTextColor">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="279dp"
                android:layout_height="252dp"
                app:srcCompat="@drawable/ic_verify_otp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/primaryTextColor"
                android:textSize="28sp"
                android:text="Verify OTP" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/opt_sent_text" />

            <EditText
                android:id="@+id/otpNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:autofillHints=""
                android:background="@drawable/normal_curve_radius"
                android:ems="10"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:padding="6sp"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/verifyOTP"
                android:layout_width="276dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"
                android:background="@drawable/primary_btn_bg"
                android:text="@string/verify_otp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/otpError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:visibility="invisible"
                android:textColor="@color/red"
                android:text="@string/error_text" />

            <ProgressBar
                android:id="@+id/OtpProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="invisible"/>
        </LinearLayout>
    </FrameLayout>


</LinearLayout>