<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="300dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/dishImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fruits"
            android:contentDescription="@string/favorite" />
        <androidx.cardview.widget.CardView
            android:layout_width="262dp"
            android:layout_height="155dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="8dp"
            android:layout_gravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="4dp">
                <TextView
                    android:id="@+id/dishTitleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/fruit_salad" />

                <TextView
                    android:id="@+id/dishDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sanchez"
                    android:layout_marginTop="2dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/fuit_salad"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dishPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="Rs.200"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="8dp"
                    android:background="@drawable/favourite_background"
                    android:clickable="true"
                    android:contentDescription="@string/favorite"
                    android:elevation="4dp"
                    android:focusable="true"
                    android:src="@drawable/ic_heart_favourite_like" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

</LinearLayout>